src/css/navbar.scss
.navbar {
  border-bottom: 1px solid black;
  padding: 1rem 3%;
  z-index: 3;

  .nav-link {
    margin-left: 1rem;
    margin-bottom: 0;
    display: flex;
    align-items: center;
    p {
      margin-bottom: 0;
    }
  }

  .toggle {
    margin-left: 1rem;
  }

  .kDUHQk,
  .sc-bdfBwQ {
    outline: none !important;
    box-shadow: none !important;
  }
}

